<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.startuppy.ResultsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@color/orange"
        android:fontFamily="@font/coiny"
        android:gravity="center"
        android:text="@string/resultsScreenText"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="@dimen/fontSizeMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@color/orange"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_results"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="end"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontSizeLarge" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/score_divider"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontSizeLarge" />

        <TextView
            android:id="@+id/total_questions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="start"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontSizeLarge" />

    </LinearLayout>

    <TextView
        android:id="@+id/resource_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:autoLink="web"
        android:lineSpacingExtra="@dimen/edge_padding_standard"
        android:paddingBottom="@dimen/edge_padding_standard"
        android:paddingLeft="@dimen/edge_padding_standard"
        android:paddingRight="@dimen/edge_padding_standard"
        android:paddingTop="@dimen/edge_padding_standard"
        android:text="@string/learningResources"
        android:textSize="@dimen/fontSizeSmall" />

    <Button
        android:id="@+id/bonus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/edge_padding_standard"
        android:background="@color/orange"
        android:onClick="moveToBonus"
        android:text="@string/bonus_button"
        android:textSize="@dimen/fontButtons" />


</LinearLayout>
